--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "beautiful": "lint-staged",
     "start": "nodemon --inspect src/index.js",
     "watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,13 +23,26 @@
     "url": "https://github.com/NguyenTienHieu-GitHub/nodejs_blog/issues"
   },
   "homepage": "https://github.com/NguyenTienHieu-GitHub/nodejs_blog#readme",
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test && npm run foo"
+    }
+  },
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
+    "mongoose": "^8.5.1",
+    "mongoose-slug-updater": "^3.3.0",
     "node-sass": "^9.0.0"
   },
   "devDependencies": {
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.7",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.3"
   }
 }
