--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
+    "method-override": "^3.0.0",
     "mongoose": "^8.5.1",
     "mongoose-slug-updater": "^3.3.0",
     "node-sass": "^9.0.0"
