--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-handlebars": "^7.1.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.5.1",
+    "mongoose-delete": "^1.0.2",
     "mongoose-slug-updater": "^3.3.0",
     "node-sass": "^9.0.0"
   },
