--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     }
   },
   "dependencies": {
+    "blog": "file:",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.5.1",
     "mongoose-delete": "^1.0.2",
+    "mongoose-sequence": "^6.0.1",
     "mongoose-slug-updater": "^3.3.0",
     "node-sass": "^9.0.0"
   },
